fix: header style and gift list images on mobile

--- a/src/assets/scss/habibi-theme/layout/_header.scss
+++ b/src/assets/scss/habibi-theme/layout/_header.scss
@@ -1495,7 +1495,7 @@
 @media (max-width: 991px) {
     .wpo-site-header,
     .wpo-header-style-2 {
-        // z-index: 99999;
+        z-index: 99999;
     }
 }
 
